--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 /*======= Font rengini #3C373B yapan bir yeni bir universal selector yaratın*/
-
+* {color: #3C373B;}
 
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
   /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
-  font-size: 10px;
+  font-size: 60px;
+  text-align: center;
+  
 }
 
 h2, h3, h4, h5, h6 {
@@ -13,10 +15,28 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 0;
   padding: 0 10px;
   /*=======  Font size'ı 30px yapın*/
-  font-size: 10px;
+  font-size: 30px;
+  ;
+}
+
+/*a{ ben yaptım
+  font-family: 'Gaegu', cursive;
+  text-align: center ;
+  color:#3C373B;
+  font-size: 30px;
+  padding: 0 50px;
+  margin-bottom: 0;
+  margin-right: 10px;
+  margin-left: 10px;
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 1px;
+  
+
 }
 
 /*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:
+
 
 font-size: 16px;
 font-family: roboto;
@@ -24,24 +44,34 @@ padding: 10px;
 line-height: 1.4;
 
 */
-
+p{
+  font-size: 16px;
+font-family: roboto;
+padding: 10px;
+line-height: 1.4;
+}
 
 /*======= Sayfadaki TÜM imajlar için aşağıdaki özellikleri içeren bir selector yaratın:
 
   border-radius: 10px;
 
 */
+img {
+  border-radius: 10px;
+}
 
 .content-row {
   display: flex;
 }
 
 .content-row div {
-  /*======= margin propery yaratın.  Değerini 20px olarak atayın*/
+ margin: 20px;
+  ;   /*======= margin propery yaratın.  Değerini 20px olarak atayın*/
 }
 
 .container {
   /*======= width property yaratın. Değerini 750px olarak atayın */
+  width: 750px;
   margin: 0 auto;
 }
 
@@ -55,16 +85,32 @@ line-height: 1.4;
   text-decoration: none;
   margin-bottom: 20px;
    /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
-  
+   background: #E79947;
+   
 }
 
-.container header nav a:hover {
+.container header nav a:hover { /* seçili bir a için yapılıyor */
 /*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini #E79947 yapın. */
+background: white;
+color: #E79947;
 }
-
+main {
+  background: whitesmoke;
+  padding: 20px 0;
+}
+main img {
+  display: block;
+}
 /*======= Hakkmızda bölümü için aşağıdaki stilleri içeren bir selector yaratın:
   margin-top: 20px;
 */
+.features img {
+  width: 40%;
+}
+
+.aboutUs-section{
+  margin-top: 20px;
+}
 
 .contact-section {
   border-top: 1px dashed black;
@@ -74,11 +120,15 @@ line-height: 1.4;
 .contact-section h2 {
   padding: 0;
   margin: 0 0 10px 0;
+  
 }
 
 /*======= contact-section class'da address tag'i için aşağdıaki stilleri içeren bir selector yaratın:
    line-height: 2;
 */
+.contact-section address{
+  line-height: 2
+}
 
 footer {
   width: 100%;
@@ -89,6 +139,7 @@ footer {
 footer .footer-content { 
   margin: 0 auto; 
   /*======= width property yaratın. Değerini 750px olarak atayın */
+  width: 750px;
   
 }
 
@@ -102,10 +153,13 @@ footer nav {
 }
 
 /*======= Footer'daki anchor tag için aşağıdaki stilleri içeren bir selector yaratın:
+  
+*/
+footer a {
   margin: 10px;
   color: black;
   text-decoration: underline;
-*/
+}
 
 
 footer nav a:first-child {
@@ -115,8 +169,11 @@ footer nav a:first-child {
 /*======= Footer nav'daki anchor tag için aşağıdaki stilleri içeren bir hover state yaratın:
   color: white;
 */
+footer a:hover{
+  color: white;
+}
 
 footer .footer-content .copyright {
   padding: 20px 0;
-   /*======= metni ortalayacak kodu yazın */
+  text-align: center;  /*======= metni ortalayacak kodu yazın */
 }
